src/objects/Milestone1_Log__c.object
<CustomObject>
    <description>Force.com Labs - PM - Log items contain general information for a Project that a user may want to keep an informal record of.</description>
    <fields>
        <fullName>Detail__c</fullName>
        <inlineHelpText>ログの詳細情報。記録をとりたい情報に対して自由に入力できる。</inlineHelpText>
        <label>Detail</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>情報が知りたいプロジェクト費用</inlineHelpText>
        <label>Project Expense</label>
        <referenceTo>Milestone1_Expense__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ログをとりたいマイルストーン</inlineHelpText>
        <label>Project Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>情報が知りたいプロジェクトタスク</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>情報が知りたい時間</inlineHelpText>
        <label>Project Time</label>
        <referenceTo>Milestone1_Time__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <inlineHelpText>このログを関連づけたいプロジェクト。</inlineHelpText>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>ログの題名</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>ログの種類。ソートする時などに使える。</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Project Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>